# ORC-Project

./: .gitattributes  .gitignore  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  LICENSE  README.md  convert_fintabnet.py  create_benchmark_idex.py  create_icdar_sample.py  process_doclaynet.py  pyproject.toml  requirements.txt  requirments.txt  validate_benchmarks.py
data/benchmarks/: README.MD
data/benchmarks/pubmed_ocr/: 0003015.PMC2175272_p6_gt.json  gkv371.PMC4446431_p14_gt.json  gkv371.PMC4446431_p1_gt.json
inception/: 00_archive_index.md  01_overview.md  02_roadmap.md  03_feature_scalability.md  04_functional_specifications.md  05_project_execution_plan.md  06_critical_review_feasibility.md  07_validation_proof_strategy.md  08_performance_scale_architecture.md
infra/scripts/: check_env.py
project_plan/: 00_folder_index.md  01_readme_first.md  02_index_critical_summary.md  03_gap_closure_summary.md  04_tech_stack_architecture.md  05_concrete_data_sources.md  06_data_security_governance.md  07_performance_benchmarks.md  08_real_world_validation.md
project_plan/implementation/: 02_project_structure.md
project_plan/implementation/tasks/: 01_execution_roadmap.md
scripts/: benchmark_ocr.py
src/: preprocess_pdf_json.py
src/data/processed/: large_100_page.json  large_100_page.md  valid.json  valid.md
src/utils/: hardware.py
src/vision/: T1.1_ Vision Layer OCR Pipeline.md  benchmark_runner.py  benchmark_runner_README.md  doclaynet_benchmark.py  main.py  ocr_engine.py  ocr_engine_updated_readme.md  run_fintabnet_benchmark.py  run_ocr.py
(+42 files in other folders)
