[project]
name = "ai-frc"
version = "0.1.0"
description = "Financial Reporting Compliance OCR Pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.128.0",
  "paddleocr>=3.4.0",
  "paddlepaddle>=3.3.0",
  "pymupdf>=1.26.7",
  "rapidfuzz>=3.14.3",
  "torch>=2.1.0",
  "uvicorn>=0.40.0",

  # ✅ Correct platform-specific ONNX runtime
  "onnxruntime>=1.16.0; sys_platform == 'win32'",
  "onnxruntime-silicon>=1.16.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
